tests/parser/tests/cases/should_fail/short_ascii_code/case.stderr
error: encountered unexpected character `'`. ASCII escape code must only contain hex digits
 --> $DIR/case.hash:1:8
1 |   k := '\x0';
  |          ^^ here
